--- a/point.io/en.lproj/iPhone_Storyboard.storyboard
+++ b/point.io/en.lproj/iPhone_Storyboard.storyboard
@@ -395,7 +395,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Qv5-Hq-Iq3">
-                                <rect key="frame" x="0.0" y="21" width="320" height="506"/>
+                                <rect key="frame" x="0.0" y="42" width="320" height="506"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -857,6 +857,7 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
                 <relationship kind="action" name="signInPressed"/>
                 <relationship kind="action" name="signOutPressed"/>
                 <relationship kind="action" name="signUpPressed"/>
+                <relationship kind="outlet" name="detailViewController" candidateClass="connectionsTableViewControlleriPad"/>
                 <relationship kind="outlet" name="goBackButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="passwordTextField" candidateClass="UITextField"/>
                 <relationship kind="outlet" name="signInButton" candidateClass="UIButton"/>
@@ -870,6 +871,14 @@ AQABAAEAAQAB//+dkAEA//+PgAAE//+dkAEI//+dkAEMUERUAFBTVABQV1QAUFBUAAAAAAEAAAABA
         </class>
         <class className="connectionsTableViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/connectionsTableViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="addNewConnectionPressed:"/>
+                <relationship kind="action" name="manageStoredConnectionsPressed:"/>
+                <relationship kind="outlet" name="manageStoredConnectionsButton" candidateClass="UIBarButtonItem"/>
+            </relationships>
+        </class>
+        <class className="connectionsTableViewControlleriPad" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/connectionsTableViewControlleriPad.h"/>
             <relationships>
                 <relationship kind="action" name="addNewConnectionPressed:"/>
                 <relationship kind="action" name="manageStoredConnectionsPressed:"/>
